запуск и стоп по клавише, отмотка времени, оси